fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -212,8 +212,12 @@
   }
 
   .prose figure[data-rehype-pretty-code-figure] {
-    @apply bg-neutral-50 dark:bg-neutral-900 rounded-lg overflow-x-auto border border-neutral-200 dark:border-neutral-900;
+    @apply bg-neutral-50 dark:bg-neutral-900 rounded-lg border border-neutral-200 dark:border-neutral-900;
     @apply my-6 bg-[#011627] py-3;
+  }
+
+  .prose [data-rehype-pretty-code-figure] > pre {
+    @apply overflow-x-auto;
   }
 
   figcaption[data-rehype-pretty-code-title] {
